--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <p>I'm Tomiwa Clement, a Computer Scientist and a Web developer.</p>
         </div>
     </section>
+
     <!-- SKILLS CONTAINER SECTION -->
     <section class="skills-container">
         <h2>My Web Development skills:</h2>
@@ -76,6 +77,7 @@
 
         </div>
     </section>
+
     <!-- PROJECTS  SECTION  -->
     <div class="proj" id="project">
         <h2>Projects:</h2>
@@ -88,10 +90,9 @@
         <a href="https://tommyclemz1.github.io/drum-kit/"><div class="five"></div></a>
         <a href="https://tommyclemz1.github.io/crowdfund/"><div class="six"></div></a>
     </section>
-
+        <!-- ABOUT SECTION  -->
     <section class="about" id="about">
         <h2>About me</h2>
-
         <p>
             I'm Tomiwa Clement, a Computer Science student in the Lagos State University with a passion for
             problem-solving and a keen interest in technology. My journey into this field has allowed me to gain
@@ -104,27 +105,30 @@
 
 
     </section>
-
+        <!-- FEEDBACK SECTION  -->
     <section class="give-feedback" id="contact">
         <h2>Contact Me!</h2>
-        <form action="" onsubmit="return(contact())" name="contactForm">
+        <form onsubmit="return(contact())" name="contactForm" id="contactformid">
 
-            <input type="text" placeholder="Enter Name" name="name">
+            <input type="text" placeholder="Enter Name" name="name" id="name">
             <p class="name-err"></p>
 
-            <input type="email" placeholder="Enter e-mail address" name="email">
+            <input type="email" placeholder="Enter e-mail address" name="email" id="emailid">
             <p class="add-err"></p>
 
 
-            <textarea name="feedback" id="" cols="30" rows="10"
+            <textarea name="feedback" id="messagecontent" cols="30" rows="10"
                 placeholder="Write your Feedback/Observation😉"></textarea>
             <p class="feedback-err"></p>
             <br>
             <button type="submit">Send Feedback!</button>
 
+            <div class="alert"></div>
+
         </form>
     </section>
-    <!-- THE FOOTER SECTION  -->
+
+    <!-- THE FOOTER AREA -->
     <footer class="gradient-background">
         <hr>
         <div class="img-icon">
@@ -155,6 +159,7 @@
 
 
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
     <script src="script.js"></script>
 </body>
 
